seaqt/QtNetwork/gen_qabstractsocket.h

class QAbstractSocket;
class QHostAddress;
class QMetaObject;
class QObject;
class QVariant;
typedef struct QAbstractSocket QAbstractSocket;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QHostAddress QHostAddress;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
bool QAbstractSocket_override_virtual_socketOption(void* self, intptr_t slot);
bool QAbstractSocket_override_virtual_close(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_close(void* self);
bool QAbstractSocket_override_virtual_isSequential(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_isSequential(const void* self);
bool QAbstractSocket_override_virtual_atEnd(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_atEnd(const void* self);
bool QAbstractSocket_override_virtual_waitForConnected(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_waitForConnected(void* self, int msecs);
bool QAbstractSocket_override_virtual_waitForReadyRead(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_waitForReadyRead(void* self, int msecs);
bool QAbstractSocket_override_virtual_waitForBytesWritten(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_waitForBytesWritten(void* self, int msecs);
bool QAbstractSocket_override_virtual_waitForDisconnected(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_waitForDisconnected(void* self, int msecs);
bool QAbstractSocket_override_virtual_readData(void* self, intptr_t slot);
long long QAbstractSocket_virtualbase_readData(void* self, char* data, long long maxlen);
bool QAbstractSocket_override_virtual_readLineData(void* self, intptr_t slot);
long long QAbstractSocket_virtualbase_readLineData(void* self, char* data, long long maxlen);
bool QAbstractSocket_override_virtual_writeData(void* self, intptr_t slot);
long long QAbstractSocket_virtualbase_writeData(void* self, const char* data, long long len);
bool QAbstractSocket_override_virtual_open(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_open(void* self, int mode);
bool QAbstractSocket_override_virtual_pos(void* self, intptr_t slot);
long long QAbstractSocket_virtualbase_pos(const void* self);
bool QAbstractSocket_override_virtual_size(void* self, intptr_t slot);
long long QAbstractSocket_virtualbase_size(const void* self);
bool QAbstractSocket_override_virtual_seek(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_seek(void* self, long long pos);
bool QAbstractSocket_override_virtual_reset(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_reset(void* self);
bool QAbstractSocket_override_virtual_event(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_event(void* self, QEvent* event);
bool QAbstractSocket_override_virtual_eventFilter(void* self, intptr_t slot);
bool QAbstractSocket_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QAbstractSocket_override_virtual_timerEvent(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QAbstractSocket_override_virtual_childEvent(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_childEvent(void* self, QChildEvent* event);
bool QAbstractSocket_override_virtual_customEvent(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_customEvent(void* self, QEvent* event);
bool QAbstractSocket_override_virtual_connectNotify(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QAbstractSocket_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QAbstractSocket_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QAbstractSocket_staticMetaObject();
void QAbstractSocket_delete(QAbstractSocket* self);