seaqt/QtNetwork/gen_qabstractsocket.nim

proc fcQAbstractSocket_override_virtual_socketOption(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_socketOption".}
proc fQAbstractSocket_virtualbase_close(self: pointer, ): void{.importc: "QAbstractSocket_virtualbase_close".}
proc fcQAbstractSocket_override_virtual_close(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_close".}
proc fQAbstractSocket_virtualbase_isSequential(self: pointer, ): bool{.importc: "QAbstractSocket_virtualbase_isSequential".}
proc fcQAbstractSocket_override_virtual_isSequential(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_isSequential".}
proc fQAbstractSocket_virtualbase_atEnd(self: pointer, ): bool{.importc: "QAbstractSocket_virtualbase_atEnd".}
proc fcQAbstractSocket_override_virtual_atEnd(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_atEnd".}
proc fQAbstractSocket_virtualbase_waitForConnected(self: pointer, msecs: cint): bool{.importc: "QAbstractSocket_virtualbase_waitForConnected".}
proc fcQAbstractSocket_override_virtual_waitForConnected(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_waitForConnected".}
proc fQAbstractSocket_virtualbase_waitForReadyRead(self: pointer, msecs: cint): bool{.importc: "QAbstractSocket_virtualbase_waitForReadyRead".}
proc fcQAbstractSocket_override_virtual_waitForReadyRead(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_waitForReadyRead".}
proc fQAbstractSocket_virtualbase_waitForBytesWritten(self: pointer, msecs: cint): bool{.importc: "QAbstractSocket_virtualbase_waitForBytesWritten".}
proc fcQAbstractSocket_override_virtual_waitForBytesWritten(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_waitForBytesWritten".}
proc fQAbstractSocket_virtualbase_waitForDisconnected(self: pointer, msecs: cint): bool{.importc: "QAbstractSocket_virtualbase_waitForDisconnected".}
proc fcQAbstractSocket_override_virtual_waitForDisconnected(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_waitForDisconnected".}
proc fQAbstractSocket_virtualbase_readData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QAbstractSocket_virtualbase_readData".}
proc fcQAbstractSocket_override_virtual_readData(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_readData".}
proc fQAbstractSocket_virtualbase_readLineData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QAbstractSocket_virtualbase_readLineData".}
proc fcQAbstractSocket_override_virtual_readLineData(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_readLineData".}
proc fQAbstractSocket_virtualbase_writeData(self: pointer, data: cstring, len: clonglong): clonglong{.importc: "QAbstractSocket_virtualbase_writeData".}
proc fcQAbstractSocket_override_virtual_writeData(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_writeData".}
proc fQAbstractSocket_virtualbase_open(self: pointer, mode: cint): bool{.importc: "QAbstractSocket_virtualbase_open".}
proc fcQAbstractSocket_override_virtual_open(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_open".}
proc fQAbstractSocket_virtualbase_pos(self: pointer, ): clonglong{.importc: "QAbstractSocket_virtualbase_pos".}
proc fcQAbstractSocket_override_virtual_pos(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_pos".}
proc fQAbstractSocket_virtualbase_size(self: pointer, ): clonglong{.importc: "QAbstractSocket_virtualbase_size".}
proc fcQAbstractSocket_override_virtual_size(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_size".}
proc fQAbstractSocket_virtualbase_seek(self: pointer, pos: clonglong): bool{.importc: "QAbstractSocket_virtualbase_seek".}
proc fcQAbstractSocket_override_virtual_seek(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_seek".}
proc fQAbstractSocket_virtualbase_reset(self: pointer, ): bool{.importc: "QAbstractSocket_virtualbase_reset".}
proc fcQAbstractSocket_override_virtual_reset(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_reset".}
proc fQAbstractSocket_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QAbstractSocket_virtualbase_event".}
proc fcQAbstractSocket_override_virtual_event(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_event".}
proc fQAbstractSocket_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QAbstractSocket_virtualbase_eventFilter".}
proc fcQAbstractSocket_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_eventFilter".}
proc fQAbstractSocket_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QAbstractSocket_virtualbase_timerEvent".}
proc fcQAbstractSocket_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_timerEvent".}
proc fQAbstractSocket_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QAbstractSocket_virtualbase_childEvent".}
proc fcQAbstractSocket_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_childEvent".}
proc fQAbstractSocket_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QAbstractSocket_virtualbase_customEvent".}
proc fcQAbstractSocket_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_customEvent".}
proc fQAbstractSocket_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QAbstractSocket_virtualbase_connectNotify".}
proc fcQAbstractSocket_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_connectNotify".}
proc fQAbstractSocket_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QAbstractSocket_virtualbase_disconnectNotify".}
proc fcQAbstractSocket_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QAbstractSocket_override_virtual_disconnectNotify".}
proc fcQAbstractSocket_staticMetaObject(): pointer {.importc: "QAbstractSocket_staticMetaObject".}
proc fcQAbstractSocket_delete(self: pointer) {.importc: "QAbstractSocket_delete".}


func init*(T: type gen_qabstractsocket_types.QAbstractSocket, h: ptr cQAbstractSocket): gen_qabstractsocket_types.QAbstractSocket =
  T(h: h)
proc create*(T: type gen_qabstractsocket_types.QAbstractSocket, socketType: cint, parent: gen_qobject_types.QObject): gen_qabstractsocket_types.QAbstractSocket =
  gen_qabstractsocket_types.QAbstractSocket.init(fcQAbstractSocket_new(cint(socketType), parent.h))

proc metaObject*(self: gen_qabstractsocket_types.QAbstractSocket, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQAbstractSocket_metaObject(self.h))

proc metacast*(self: gen_qabstractsocket_types.QAbstractSocket, param1: cstring): pointer =
  fcQAbstractSocket_metacast(self.h, param1)

proc metacall*(self: gen_qabstractsocket_types.QAbstractSocket, param1: cint, param2: cint, param3: pointer): cint =
  fcQAbstractSocket_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qabstractsocket_types.QAbstractSocket, s: cstring): string =
  let v_ms = fcQAbstractSocket_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qabstractsocket_types.QAbstractSocket, s: cstring): string =
  let v_ms = fcQAbstractSocket_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc resume*(self: gen_qabstractsocket_types.QAbstractSocket, ): void =
  fcQAbstractSocket_resume(self.h)

proc pauseMode*(self: gen_qabstractsocket_types.QAbstractSocket, ): cint =
  cint(fcQAbstractSocket_pauseMode(self.h))

proc setPauseMode*(self: gen_qabstractsocket_types.QAbstractSocket, pauseMode: cint): void =
  fcQAbstractSocket_setPauseMode(self.h, cint(pauseMode))

proc bindX*(self: gen_qabstractsocket_types.QAbstractSocket, address: gen_qhostaddress_types.QHostAddress): bool =
  fcQAbstractSocket_bindX(self.h, address.h)

proc bindX*(self: gen_qabstractsocket_types.QAbstractSocket, ): bool =
  fcQAbstractSocket_bind2(self.h)

proc connectToHost*(self: gen_qabstractsocket_types.QAbstractSocket, hostName: string, port: cushort, mode: cint, protocol: cint): void =
  fcQAbstractSocket_connectToHost(self.h, struct_miqt_string(data: hostName, len: csize_t(len(hostName))), port, cint(mode), cint(protocol))

proc connectToHost*(self: gen_qabstractsocket_types.QAbstractSocket, address: gen_qhostaddress_types.QHostAddress, port: cushort, mode: cint): void =
  fcQAbstractSocket_connectToHost2(self.h, address.h, port, cint(mode))

proc disconnectFromHost*(self: gen_qabstractsocket_types.QAbstractSocket, ): void =
  fcQAbstractSocket_disconnectFromHost(self.h)

proc isValid*(self: gen_qabstractsocket_types.QAbstractSocket, ): bool =
  fcQAbstractSocket_isValid(self.h)

proc bytesAvailable*(self: gen_qabstractsocket_types.QAbstractSocket, ): clonglong =
  fcQAbstractSocket_bytesAvailable(self.h)

proc bytesToWrite*(self: gen_qabstractsocket_types.QAbstractSocket, ): clonglong =
  fcQAbstractSocket_bytesToWrite(self.h)

proc canReadLine*(self: gen_qabstractsocket_types.QAbstractSocket, ): bool =
  fcQAbstractSocket_canReadLine(self.h)

proc localPort*(self: gen_qabstractsocket_types.QAbstractSocket, ): cushort =
  fcQAbstractSocket_localPort(self.h)

proc localAddress*(self: gen_qabstractsocket_types.QAbstractSocket, ): gen_qhostaddress_types.QHostAddress =
  gen_qhostaddress_types.QHostAddress(h: fcQAbstractSocket_localAddress(self.h))

proc peerPort*(self: gen_qabstractsocket_types.QAbstractSocket, ): cushort =
  fcQAbstractSocket_peerPort(self.h)

proc peerAddress*(self: gen_qabstractsocket_types.QAbstractSocket, ): gen_qhostaddress_types.QHostAddress =
  gen_qhostaddress_types.QHostAddress(h: fcQAbstractSocket_peerAddress(self.h))

proc peerName*(self: gen_qabstractsocket_types.QAbstractSocket, ): string =
  let v_ms = fcQAbstractSocket_peerName(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc readBufferSize*(self: gen_qabstractsocket_types.QAbstractSocket, ): clonglong =
  fcQAbstractSocket_readBufferSize(self.h)

proc setReadBufferSize*(self: gen_qabstractsocket_types.QAbstractSocket, size: clonglong): void =
  fcQAbstractSocket_setReadBufferSize(self.h, size)

proc abort*(self: gen_qabstractsocket_types.QAbstractSocket, ): void =
  fcQAbstractSocket_abort(self.h)

proc socketDescriptor*(self: gen_qabstractsocket_types.QAbstractSocket, ): uint =
  fcQAbstractSocket_socketDescriptor(self.h)

proc setSocketDescriptor*(self: gen_qabstractsocket_types.QAbstractSocket, socketDescriptor: uint, state: cint, openMode: cint): bool =
  fcQAbstractSocket_setSocketDescriptor(self.h, socketDescriptor, cint(state), cint(openMode))

proc setSocketOption*(self: gen_qabstractsocket_types.QAbstractSocket, option: cint, value: gen_qvariant_types.QVariant): void =
  fcQAbstractSocket_setSocketOption(self.h, cint(option), value.h)

proc socketOption*(self: gen_qabstractsocket_types.QAbstractSocket, option: cint): gen_qvariant_types.QVariant =
  gen_qvariant_types.QVariant(h: fcQAbstractSocket_socketOption(self.h, cint(option)))

proc socketType*(self: gen_qabstractsocket_types.QAbstractSocket, ): cint =
  cint(fcQAbstractSocket_socketType(self.h))

proc state*(self: gen_qabstractsocket_types.QAbstractSocket, ): cint =
  cint(fcQAbstractSocket_state(self.h))

proc error*(self: gen_qabstractsocket_types.QAbstractSocket, ): cint =
  cint(fcQAbstractSocket_error(self.h))

proc close*(self: gen_qabstractsocket_types.QAbstractSocket, ): void =
  fcQAbstractSocket_close(self.h)

proc isSequential*(self: gen_qabstractsocket_types.QAbstractSocket, ): bool =
  fcQAbstractSocket_isSequential(self.h)
